# gitl-pipeclean

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN_10.md  PLAN_12.md  PLAN_9.md  README.md  fib.py  grader-in-the-loop.code-workspace  issue.md  main.cpp  plan.md  solution.cpp
.claude/skills/tdd-slice/: SKILL.md
.github/workflows/: slice-evidence.yml
evidence/issue10/slice1/: phase1_plan.md  sha256sums.txt
evidence/issue11/: postmortem.md
evidence/issue11/slice1/: phase1_plan.md  phase4_results.md
evidence/issue11/slice2/: phase1_plan.md  phase4_results.md
evidence/issue11/slice3/: phase1_plan.md  phase4_results.md
evidence/issue36/slice1/: sha256sums.txt
evidence/issue43/slice1/: sha256sums.txt
evidence/issue53/slice1/: sha256sums.txt
evidence/issue55/slice1/: sha256sums.txt
evidence/issue8/slice1/: phase1_plan.md  phase4_results.md  postmortem.md
evidence/issue9/slice1/: phase1_plan.md  phase4_results.md  sha256sums.txt
scripts/: post_as_app.py  run_qa_gate.py  run_tdd_post.py
tests/: test_fib.py
tests/cases/: admin_lifecycle.expected  admin_lifecycle.in
